index.html, styles.css: edit html such that the sidebar is divided into classes for the logo and menu-items, wrapped in the container sidebar. With this change, ensure that each container is align in their respective grid column.

--- a/styles.css
+++ b/styles.css
@@ -67,8 +67,8 @@ h1, h2, h3, h4, h5, h6 {
 
     /* fonts */
     --font-main: 'roboto', sans-serif;
-    --font-main-size: 1em;
-    --font-large-size: 2em;
+    --font-main-size: 1rem;
+    --font-large-size: 2rem;
     --font-bold: bolder;
 }
 
@@ -89,8 +89,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .sidebar {
-    display: grid;
-    grid-row: 1 / 3;
+    grid-column: 1;
+}
+
+.sidebar-logo {
+    font-size: var(--font-large-size);
 }
 
 .header {
@@ -99,9 +102,12 @@ h1, h2, h3, h4, h5, h6 {
 
 .main-content {
     grid-column: 2;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
 }
 
 .project-container {
+    grid-column: 1;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 15px;
@@ -109,4 +115,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .project-container .cards {
     height: 200px;
+}
+
+.misc-container {
+    display: grid;
 }
